insert manually into bda (categoria, perfil and usuario)